--- a/style.css
+++ b/style.css
@@ -67,3 +67,21 @@ a:hover,
 a:active {
     text-decoration: underline;
 }
+
+.fa-solid {
+    float: right;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.name {
+    margin-top: 20px;
+    margin-right: 20px;
+}
+
+.name img {
+    height: 28px;
+    width: 28px;
+    vertical-align: sub;
+    margin-right: 5px;
+}
