--- a/style.css
+++ b/style.css
@@ -85,3 +85,10 @@ a:active {
     vertical-align: sub;
     margin-right: 5px;
 }
+
+
+@media screen and (max-width: 600px) {
+    .container {
+        flex-direction: column;
+    }
+}
