--- a/style.css
+++ b/style.css
@@ -108,6 +108,41 @@ a:active {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
     max-width: 95%;
     width: 500px;
+    animation: modalopen 5s;
+}
+
+@keyframes modalopen {
+    from {
+        opacity: 0;
+    }
+    to { 
+        opacity: 1;
+    }
+}
+
+.close-icon {
+    float: right;
+    color: white;
+    font-size: 24px;
+    position: relative;
+    top: 13px;
+    right: 13px;
+    cursor: pointer;
+}
+
+.modal-header {
+    background: var(--primary-color);
+    color: white;
+    padding: 15px;
+}
+
+h3 {
+    margin: 0;
+}
+
+.modal-content {
+    padding: 20px;
+    background: whitesmoke;
 }
 
 @media screen and (max-width: 600px) {
